# tinyproxy

./: README  configure.ac
docs/man5/: tinyproxy.conf.txt.in
etc/: Makefile.am  snreplace  tinyproxy.conf.in
src/: Makefile.am  authors.c  child.c  conf.c  conf.h  main.c  reqs.c  snreplace.c  snreplace.h
tests/scripts/: run_tests.sh
